--- a/blogpost.html
+++ b/blogpost.html
@@ -7,8 +7,8 @@
         <div id="container">
             <div id="cabecera">
                 HyperBlog
-                <span id="tagline">Tu blog de confianza
-                </span>
+                <span id="tagline">Tu blog maestro
+                 </span>
             </div>
             <div id="post">   
                 <h1>Este es el titulo atractivo e interesante del post</h1>
@@ -20,6 +20,7 @@
                     Youtube. Execto si eres un Rockstar. Pero estadisticamente
                     no lo eres.........por ahora
                 </p>
+                <p>Suscribete y dale Like</p>
             </div>
         </div>    
     </body>
