--- a/blogpost.html
+++ b/blogpost.html
@@ -22,6 +22,9 @@
                 </p>
                 <p>Suscribete y dale Like</p>
             </div>
+            </div id="footer">
+                Hecho con amor en Platzi
+            </div>
         </div>    
     </body>
 </html>
