--- a/blogpost.html
+++ b/blogpost.html
@@ -23,7 +23,7 @@
                 <p>Suscribete y dale Like</p>
             </div>
             </div id="footer">
-                Hecho con amor en Platzi
+                Hecho con amor en Platzi &lt;3
             </div>
         </div>    
     </body>
