--- a/blogpost.html
+++ b/blogpost.html
@@ -8,19 +8,16 @@
             <div id="cabecera">
                     <img id="logo" src="imagenes/UCHI.png" />
                 HyperBlog
-                <span id="tagline">Tu blog de cabecera
+                <span id="tagline">Tu blog de confianza
                 </span>
             </div>
             <div id="post">   
                 <h1>Este es el titulo atractivo e interesante del post</h1>
-<<<<<<< HEAD
                 <p>Y este es el parrafo de inicio donde vamos a explicar 
                 las cosas increibles que se pueden hacer con ramas.</p>
                 <p><img src="imagenes/equipo.png" width="100%" /></p>
-=======
                 <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar 
                 las cosas incre&iacute;bles que se pueden hacer con ramas.</p>
->>>>>>> 97e0f2b416992c244975fdaf0a2961c388fadea5
                 <p>
                     Los blogs son la mejor forma de compartir información
                     y tus ideas. Mucho mas que ir a conferencias o salir en
